--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "astro": "^5.12.0",
     "dayjs": "^1.11.13",
     "lodash.kebabcase": "^4.1.1",
+    "next": "^15.4.2",
+    "react": "^19.1.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
     "satori": "^0.15.2",
