--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.12.0",
+    "astro-compressor": "^1.0.0",
     "dayjs": "^1.11.13",
     "lodash.kebabcase": "^4.1.1",
     "next": "^15.4.2",
